# veal

./: .gitignore  Cargo.toml  build.rs
src/: app.rs  core.rs  io.rs  main.rs  ui.rs
src/core/: stats.rs  types.rs
src/io/: json.rs  loader.rs  npy.rs  project.rs
src/ui/: bindings.rs  state.rs
ui/: main.slint
ui/components/: create-project.slint  custom-dropdown.slint  entry.slint  main-app-view.slint  projects-view.slint  sidebar.slint
