[package]
name = "veal"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1.15.1", features = ["renderer-skia"] }
rfd = "0.17.2"
dirs = "6.0.0"
zip = "8.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ndarray = "0.17.2"
ndarray-npy = "0.10.0"

[build-dependencies]
slint-build = "1.15.1"